# pyISOPACh

./: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  setup.py  test.py
pyidick/: Element.py  Molecule.py  __init__.py  element.py
pyidick/data/: periodic_table.json
pyisopach/: __init__.py  chemical.py  element.py  molecule.py  periodic_table.py
tests/: element_test.py  molecule_test.py  test_element.py  test_molecule.py
