[metadata]
name = pyisopach
author = Keiron O'Shea
description = This program calculates the isotopic distribution/pattern of a given chemical species.
version = 0.1.1
url = https://github.com/AberystwythSystemsBiology/pyISOPACh
keywords =
  cheminformatics
  isotopic distribution
  metabolomics
classifiers =
  Development Status :: 5 - Release
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
python_requires = >= 3.2
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
